Fixing div wrap on the chat page

--- a/arrowchat/public/mobile/includes/css/style.css
+++ b/arrowchat/public/mobile/includes/css/style.css
@@ -199,7 +199,7 @@ input.mobile_search {
 	margin-bottom: 10px;
 	margin-left: 10px;
 	min-height: 20px;
-	max-width: 75%;
+	max-width: 50%;
 	text-align: left;
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
